test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidReturnTypeSizeOf.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__sizeof' has incorrect return type
	static void __sizeof() noexcept { }
}

// CHECK: 1 error generated.
